WP 5.5 image alignment issue fix

--- a/sass/editor.scss
+++ b/sass/editor.scss
@@ -144,7 +144,7 @@ th {
 /* Images */
 
 .wp-block-image {
-  margin: 0;
+  margin: 0 auto;
 }
 .alignleft {
   float: left;
